[tool.poetry]
name = "hdh-graphdatabase"
version = "0.1.0"
description = ""
authors = ["Rijken, M.A.M.M. (Marc) <marc.rijken@devolksbank.nl>"]
readme = "README.md"
packages = [{include = "hdh_graphdatabase"}]

[tool.poetry.dependencies]
python = "^3.9"
notebook = "^6.5.3"
graphdatascience = "^1.6"
jupyterlab = "^3.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
